Fix pulse-red on iOS Safari

--- a/river.css
+++ b/river.css
@@ -104,7 +104,7 @@ body, .input {
 	}
 
 	50% {
-		background: #ddd;
+		background: #f99;
 	}
 
 	100% {
